added sorting functionality to table

--- a/src/app/components/launch-row/launch-row.component.html
+++ b/src/app/components/launch-row/launch-row.component.html
@@ -1,3 +1,6 @@
-<p>
-    launch-row works!
-</p>
+<a class='launch-table__row' href={{link}} target='blank'>
+    <div class='launch-table__cell small'>{{launch.flight_number}}</div>
+    <div class='launch-table__cell small'>{{launch.launch_year}}</div>
+    <div class='launch-table__cell small'>{{launch.rocket.rocket_name}}</div>
+    <div class='launch-table__cell large'>{{launch.details}}</div>
+</a>
