--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,19 @@
 body {
 	font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
 }
+
+.launch-table__cell {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: .25rem;
+}
+
+.launch-table__cell.small {
+    border-right: 3px solid lightgrey;
+    width: 10%;
+}
+
+.launch-table__cell.large {
+    width: 70%;
+}
