reluctantly converted to html table because meh

--- a/src/app/components/launch-row/launch-row.component.html
+++ b/src/app/components/launch-row/launch-row.component.html
@@ -1,6 +1,8 @@
-<a class='launch-table__row' href={{link}} target='blank'>
-    <div class='launch-table__cell small'>{{launch.flight_number}}</div>
-    <div class='launch-table__cell small'>{{launch.launch_year}}</div>
-    <div class='launch-table__cell small'>{{launch.rocket.rocket_name}}</div>
-    <div class='launch-table__cell large'>{{launch.details}}</div>
-</a>
+<tr class='launch-table__row' (click)='goToArticle()'>
+    <!-- <a  href={{link}} target='blank'> -->
+    <td class='launch-table__cell small'>{{launch.flight_number}}</td>
+    <td class='launch-table__cell small'>{{launch.launch_year}}</td>
+    <td class='launch-table__cell small'>{{launch.rocket.rocket_name}}</td>
+    <td class='launch-table__cell large'>{{launch.details}}</td>
+    <!-- </a> -->
+</tr>
