page select buttons styled and bugs squashed

--- a/src/app/components/launch-footer/launch-footer.component.html
+++ b/src/app/components/launch-footer/launch-footer.component.html
@@ -1,9 +1,9 @@
-<tfoot>
-    <td>
-        <ul>
-            <li (click)='prevPage()'>« Prev</li>
-            <li *ngFor='let n of pageRange' click='setPage(n)'>{{ n }}</li>
-            <li (click)='nextPage()'>Next »</li>
-        </ul>
-    </td>
-</tfoot>
+<div class='launch-table__footer'>
+    <ul class='footer__button-list'>
+        <li (click)='prevPage()' class='footer__page-button' [class.disable]='currentPage === 1'><span class='arrows'>« </span>Prev</li>
+        <li *ngFor='let n of pageRange' [class.active]='currentPage === n' (click)='setPage(n)' class='footer__page-button'>{{
+            n }}</li>
+        <li (click)='nextPage()' class='footer__page-button' [class.disable]='currentPage === numOfPages'>Next <span class='arrows'>
+            »</span></li>
+    </ul>
+</div>
