added sort arrow to flight number column

--- a/src/app/components/launch-table/launch-table.component.css
+++ b/src/app/components/launch-table/launch-table.component.css
@@ -8,3 +8,16 @@
     font-size: 1.5rem;
     font-weight: 600;
 }
+
+.sort-arrow {
+    margin-right: .25rem;
+    width: 2rem;
+    height: 100%;
+    text-align: center;
+    border: 1px solid darkgrey;
+    line-height: 100%;
+}
+
+.invert {
+    transform: rotate(180deg);
+}
