--- a/src/app/components/launch-table/launch-table.component.html
+++ b/src/app/components/launch-table/launch-table.component.html
@@ -1,7 +1,7 @@
 <table>
     <tr class='launch-table__heading-row'>
         <th class='launch-table__cell small' (click)='sortTable("flight_number")'>
-            Flight Number
+            Flight Number<span class='sort-arrow' [class.invert]='!ascending'>^</span>
         </th>
         <th class='launch-table__cell small' (click)='sortTable("launch_date_unix")'>
             Launch Year
