--- a/src/app/components/launch-footer/launch-footer.component.css
+++ b/src/app/components/launch-footer/launch-footer.component.css
@@ -24,6 +24,10 @@
     cursor: pointer;
 }
 
+.footer__page-button.disable {
+    color: lightgrey;
+}
+
 .footer__page-button.disable:hover {
     background-color: white;
     cursor: default;
