changed banner image

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,5 +13,5 @@
     height: 200px;
     -webkit-text-stroke: 1px black;
     color: white;
-    background-image: url('../assets/launch2.png')
+    background-image: url('../assets/launch.png')
 }
